# sshsigner

./: README.md  app_signer.py  pyproject.toml  requirements.txt
application/: signer.py  sshsigner.py  utils.py
application/static/: main.js  signer_tt.css
application/templates/: app.html  cert.html  setup.html
application/xscripts/: oled.py  yubihsm-start.service
sshsigner/: app.py  app_signer.py  signer.py  ssh_requests.py  utils.py
sshsigner/static/: main.js  signer_tt.css
sshsigner/templates/: 404.html  app.html  setup.html
sshsigner/xscripts/: hsminsert.sh
